--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@auth/drizzle-adapter": "^1.4.1",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
@@ -18,6 +19,7 @@
     "drizzle-orm": "^0.30.0",
     "lucide-react": "^0.365.0",
     "next": "14.1.4",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "pg": "^8.12.0",
     "postgres": "^3.4.4",
