added google auth credentials

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 DATABASE_URL= "postgres://postgres:example@localhost:5432/postgres"
+GOOGLE_CLIENT_ID="790304630434-73r8mvcq29eno5uut3tc6v9tphjcmmkt.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
