--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,3 @@
 DATABASE_URL= "Place real url here"
+GOOGLE_CLIENT_ID="place your GOOGLE_CLIENT_ID here"
+GOOGLE_CLIENT_SECRET="place your GOOGLE_CLIENT_SECRET here"
