--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,7 @@
-DATABASE_URL= "Place real url here"
-GOOGLE_CLIENT_ID="place your GOOGLE_CLIENT_ID here"
-GOOGLE_CLIENT_SECRET="place your GOOGLE_CLIENT_SECRET here"
+DATABASE_URL="REPLACE ME WITH THE REAL URL OF YOUR POSTGRES DATABASE"
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET=""
+NEXTAUTH_SECRET="make_this_something_secret"
+NEXT_PUBLIC_GET_STREAM_API_KEY=""
+GET_STREAM_SECRET_KEY=""
+NEXTAUTH_URL=http://localhost:3000
