--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "3.9"
 services:
-  dev-finder-db:
+  we-collab-db:
     image: postgres
     restart: always
     container_name: we-collab-db
